# qrb_ros_samples

ai_audio/sample_speech_recognition_rt_rosnode/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ai_audio/sample_speech_recognition_rt_rosnode/launch/: qrb_ros_android_asr.launch.py  qrb_ros_speech_recognition.launch.py
ai_audio/sample_speech_recognition_rt_rosnode/src/: qrb_ros_android_asr.py
ai_audio/sample_speech_recognition_rt_rosnode/test/: install_packages_2.sh
